--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@ function mapIncidents( incidents, latlngs ){
             shape: 'circle',
             markerColor: 'pink'
           };
-          var myIcon = L.divIcon( { html: incident.index } );
+          var bg = ( incident.gendar == 'M' ? '#ccf' : '#fcc' );
+          var myIcon = L.divIcon( { html: incident.index, background: bg } );
           var text = ( incident.gendar == 'M' ? '男' : '女' ) + ' : ' + incident.text;
           L.marker( [ lat, lng ], { icon: myIcon } ).addTo( map ).bindPopup( text );
 
