--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ var lat = 38.419525;
 var lng = 140.09628;
 
 //. 初期ズームレベル
-var zoomlevel = 8;
+var zoomlevel = 9;
 
 var offset = 0.02;
 
@@ -35,7 +35,8 @@ var history = {};
 
 $(function(){
   //. 初期位置を中心とした地図を OpenStreetMap データで表示
-  map = L.map('demoMap', { dragging: true, zoomControl: true }).setView( [ lat, lng ], zoomlevel );
+  map = L.map('demoMap', { dragging: true, zoomControl: false }).setView( [ lat, lng ], zoomlevel );
+  L.control.zoom( { position: 'bottomright' } ).addTo( map );
   L.tileLayer(
     'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: 'Map data &copy; <a href="//openstreetmap.org/">OpenStreetMap</a>',
@@ -275,11 +276,20 @@ html, body {
   width: 100%;
   height: 100%;
 }
+#message{
+  position: absolute;
+  top: 10px;
+  color: #f00;
+  font-size: 20px;
+  font-weight: bold;
+}
 </style>
 </head>
 <body>
   <div>
     <div id="demoMap"></div>
+    <div id="message">地図上に表示される症例者の位置は居住地や勤務地などとは関係ありません。
+      あくまで公開されている市区町村レベルでの大まかな位置を表示しています。</div>
   </div>
 </body>
 </html>
